# hammurabi

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  Vagrantfile  chain.pem  lifetime_change.rb  shell.nix
acc-extension/: Cargo.toml  sample-datalog.pl
acc-extension/src/: main.rs
assets/: rootCA-key.pem  rootCA.pem  roots.pem
datalog/: debug.sh  make_templates.sh  modularize.sh  query.sh  run.sh
datalog/acc-examples/: lifetime.pl
datalog/impute/: chrome.pl  chrome_env.pl  disagree.pl  env.pl  ev.pl  examples.pl  firefox.pl  firefox_env.pl  input.pl  onecrl.pl  parser.py  std.pl  types.pl
datalog/static/: .test.pl.swp  applies_rules.txt  applies_rulesV2.txt  applies_rulesV3.txt  chrome.pl  chrome_env.pl  driver.py  env.pl  ev.pl  ext.lua  ext.pl  firefox.pl  fresh-staple.pl  name-constraints.pl  onecrl.pl  public_suffix_list.pl  std.pl  test.pl  zlint.pl  zlintV2.pl  zlintV3.pl  zlint_yujie.pl
prolog/: Makefile  debug.pl  debug.sh  impute.pl  impute.py  make_templates.sh  query.sh  run.sh
prolog/acc-examples/: name-constraints.pl
prolog/impute/: driver.py  env.pl  examples.pl  firefox_env.pl  input.pl
prolog/static/: applies_rulesV2.txt  checks.pl  chrome.pl  chrome_env.pl  ev.pl  firefox.pl  firefox_env.pl  lifetime.pl  psl.pl  std.pl  std.pl~merged  test.pl  test2.pl  test3.pl  types.pl  zlint.pl  zlintV2.pl
prolog/zlint/: cabf_ev.pl  (+13 more)
scripts/: acc-test.rb  chrome.sh  custom.sh  debug.sh  fetch-chain.rb  firefox.sh  install-dependencies.sh  install-extra.sh  install.sh  setup.sh  zlint.sh
src/: cert.rs  errors.rs  lib.rs  revocation.rs
(+5 files in other folders)
