[package]
name = "hammurabi-engine"
version = "0.1.0"
authors = ["James Larisch <5074906+semaj@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "hammurabi"
path = "src/lib.rs"

[dependencies]
rayon = "1.5.1"
hex = "0.4.2"
ipaddress = "0.1.2"
x509-parser = "0.9.2"
der-parser = "5.1.0"
docopt = "1.1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.10.6", features = ["blocking"] }
serde = "1.0"
csv = "1.1.3"
rsa = "0.4.0"
num-bigint-dig = "0.7.0"
rsa-der = "0.2.1"
simple_asn1 = "0.5.4"
